--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AudiobookApp</string>
+    <string name="home">Home</string>
+    <string name="share">Share</string>
+    <string name="history">History</string>
+    <string name="account">Account</string>
 </resources>
